--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,12 +1,17 @@
 <div id="<%= dom_id post %>">
   <p>
     <strong>Name:</strong>
-    <%= post.name %>
+    <%= post.title %>
   </p>
 
   <p>
     <strong>Content:</strong>
     <%= post.content %>
+  </p>
+
+  <p>
+    <strong>Tags:</strong>
+    <%= post.tags.map(&:name).join(', ') %>
   </p>
 
 </div>
