--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,10 +1,9 @@
 <h1>Editing post</h1>
 
-<%= render "form", post: @post %>
+<%= render "form", form: @form %>
 
 <br>
 
 <div>
-  <%= link_to "Show this post", @post %> |
   <%= link_to "Back to posts", posts_path %>
 </div>
